[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/graphics/brush_button.png" type="Texture" id=1]
[ext_resource path="res://src/Tools/Base.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Tools/Draw.gd" type="Script" id=3]

[node name="ToolOptions" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Brush" type="HBoxContainer" parent="." index="1"]
margin_top = 18.0
margin_right = 116.0
margin_bottom = 50.0
alignment = 1

[node name="Type" type="TextureButton" parent="Brush" index="0"]
margin_left = 1.0
margin_right = 37.0
margin_bottom = 32.0
rect_min_size = Vector2( 36, 32 )
hint_tooltip = "Select a brush"
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
texture_normal = ExtResource( 1 )

[node name="Texture" type="TextureRect" parent="Brush/Type" index="0"]
margin_right = 32.0
margin_bottom = 32.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size" type="SpinBox" parent="Brush" index="1"]
margin_left = 41.0
margin_right = 115.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
min_value = 1.0
value = 1.0
align = 1
suffix = "px"

[node name="BrushSize" type="HSlider" parent="." index="2"]
margin_left = 12.0
margin_top = 54.0
margin_right = 104.0
margin_bottom = 70.0
rect_min_size = Vector2( 92, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 1
min_value = 1.0
value = 1.0
allow_greater = true
ticks_on_borders = true

[node name="PixelPerfect" parent="." index="3"]
margin_top = 74.0
margin_bottom = 98.0

[node name="ColorInterpolation" type="VBoxContainer" parent="." index="4"]
visible = false
margin_top = 102.0
margin_right = 116.0
margin_bottom = 164.0
alignment = 1

[node name="Label" type="Label" parent="ColorInterpolation" index="0"]
margin_left = 4.0
margin_right = 111.0
margin_bottom = 14.0
hint_tooltip = "0: Color from the brush itself, 100: the currently selected color"
mouse_filter = 1
size_flags_horizontal = 4
text = "Brush color from"

[node name="Factor" type="SpinBox" parent="ColorInterpolation" index="1"]
margin_left = 21.0
margin_top = 18.0
margin_right = 95.0
margin_bottom = 42.0
hint_tooltip = "0: Color from the brush itself, 100: the currently selected color"
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
align = 1

[node name="Slider" type="HSlider" parent="ColorInterpolation" index="2"]
margin_left = 12.0
margin_top = 46.0
margin_right = 104.0
margin_bottom = 62.0
rect_min_size = Vector2( 92, 0 )
hint_tooltip = "0: Color from the brush itself, 100: the currently selected color"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 1
ticks_on_borders = true

[node name="EmptySpacer" parent="." index="5"]
margin_top = 102.0
margin_bottom = 114.0

[node name="Mirror" parent="." index="6"]
margin_top = 118.0
margin_bottom = 135.0
[connection signal="pressed" from="Brush/Type" to="." method="_on_BrushType_pressed"]
[connection signal="value_changed" from="Brush/Size" to="." method="_on_BrushSize_value_changed"]
[connection signal="value_changed" from="BrushSize" to="." method="_on_BrushSize_value_changed"]
[connection signal="value_changed" from="ColorInterpolation/Factor" to="." method="_on_InterpolateFactor_value_changed"]
[connection signal="value_changed" from="ColorInterpolation/Slider" to="." method="_on_InterpolateFactor_value_changed"]
